Update 'oyfc49iwi-python' component image to: quay.io/jsmid/rhtap-qe:8ee2dc5712368061c4e1c08a3646afdf8db86ce9@sha256:20319491be49a76eb0437bd5b426edc3da8ffed5f2518fe78fc72cf74675dff1

--- a/components/oyfc49iwi-python/overlays/development/deployment-patch.yaml
+++ b/components/oyfc49iwi-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: oyfc49iwi-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:8ee2dc5712368061c4e1c08a3646afdf8db86ce9@sha256:20319491be49a76eb0437bd5b426edc3da8ffed5f2518fe78fc72cf74675dff1
+          name: container-image
